--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: rmorland@athabascau.ca
 description: >- # this means to ignore newlines until "baseurl:"
   Join us for the 2025 IEEE Smart World Congress in Calgary, Alberta, Canada July 2025
 baseurl: "/"
-url: "https://raymorland.github.io"
+url: "https://ieee-swc-2025.github.io"
 author:
   name: "IEEE SWC 2025 Organizing Committee"
   email: "rmorland@athabascau.ca"
